# square-game

./: .gitignore  README.md  SquareMaze.py  install_and_run.sh  levels.py  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
src/sqaure_game/: SquareMaze.py  __init__.py  levels.py  players.py
src/square_game/: SquareMaze.py  default_settings.py  levels.py  levels11_20.py  players.py
